--- a/project.properties
+++ b/project.properties
@@ -6,8 +6,8 @@
 isPackages=./assets/IS/Packages
 isTests=./assets/IS/Tests
 isConfigDir=./assets/IS/config
-bpmProjects=./assets/BPM/
-mwsProjects=./assets/MWS/
+#bpmProjects=./assets/BPM/
+#mwsProjects=./assets/MWS/
 rulesProjects=./assets/Rules/
 #Should always be named UniversalMessaging
 umExport=./assets/UniversalMessaging
